--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <a href="#order" class="cta-btn">Order <i class="fas fa-arrow-down"></i></a>
       </div>
     
+  </section>
 
 
   <!-- Order Section -->
